# fhome

./: .env.sample  .gitignore  .goreleaser.yaml  BUILD.bazel  LICENSE  LICENSE.md  MODULE.bazel  Makefile  README.md  WORKSPACE.bazel  docker-compose.yaml  env.go  fhome-homekit.service  fhomed.service  get_user_config.json  get_user_config_orig.json  go.mod  go.sum  go.work  ids.txt  main.go  messages.go  notes.json  set_env
.buildkite/: pipeline.yaml
.buildkite/images/publish/: Dockerfile
.buildkite/scripts/: build.sh  format.sh  lint.sh  publish.sh  test.sh
.github/workflows/: docker.yaml  prepare.yaml  publish.yaml  release.yaml
.junie/: guidelines.md
.run/: fhome config list --glance.run.xml  fhomed (HomeKit + webserver).run.xml  fhomed --homekit --debug.run.xml
api/: BUILD.bazel  client.go  config.go  icons.go  mappers.go  mappers_test.go  messages.go  responses.go  user_config.go  utils.go
autocomplete/: bash_autocomplete_fhome  bash_autocomplete_fhomed  zsh_autocomplete  zsh_autocomplete_fhome  zsh_autocomplete_fhomed
cfg/: cfg.go
cmd/: env.go  main.go
cmd/db/: db.go
cmd/fh/: commands.go  main.go
cmd/fhome/: BUILD.bazel  cache.go  commands.go  main.go
cmd/fhome-exporter/: BUILD.bazel  Dockerfile  main.go
cmd/fhome-homekit/: BUILD.bazel  main.go
cmd/fhome-homekit/homekit/: BUILD.bazel  homekit.go
cmd/fhome-web/: BUILD.bazel  main.go
cmd/fhome-web/webserver/: BUILD.bazel  webserver.go
cmd/fhomed/: BUILD.bazel  daemon.go  hack.go  main.go  utils.go
cmd/fhomed/api/: api.go
cmd/fhomed/api/templates/: index.html.tmpl
cmd/fhomed/config/: config.go  icons.go
cmd/fhomed/db/: configHash  db.go  keypair  uuid
cmd/fhomed/homekit/: BUILD.bazel  homekit.go
cmd/fhomed/requests/: devices.http  toggle.http
cmd/fhomed/templates/: index.html.tmpl
cmd/fhomed/webserver/: api.go  webserver.go
cmd/fhomed/webserver/templates/: index.html.tmpl
env/: env.go
fhome/: changes.go  client.go  config.go  fhome.go  file.go  full_config.go  icons.go  mappers.go  messages.go  responses.go  user_config.go  utils.go
highlevel/: BUILD.bazel  connect.go  utils.go
internal/: BUILD.bazel  config.go  connect.go
