module(name = "fhome")

bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "gazelle", version = "0.51.3")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_adrg_strutil",
    "com_github_brutella_hap",
    "com_github_gorilla_websocket",
    "com_github_knadh_koanf",
    "com_github_lmittmann_tint",
    "com_github_urfave_cli_v3",
    "org_golang_x_crypto",
)
