module(name = "fhome")

bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "gazelle", version = "0.51.3")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_oci", version = "2.3.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_adrg_strutil",
    "com_github_brutella_hap",
    "com_github_gorilla_websocket",
    "com_github_knadh_koanf",
    "com_github_lmittmann_tint",
    "com_github_urfave_cli_v3",
    "org_golang_x_crypto",
)


oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "alpine_3_23",
    image = "alpine",
    tag = "3.23",
    digest = "sha256:5b10f432ef3da1b8d4c7eb6c487f2f5a8f096bc91145e68878dd4a5019afde11",
    platforms = ["linux/amd64"],
)

use_repo(
    oci,
    "alpine_3_23",
    "alpine_3_23_linux_amd64",
)