load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "internal",
    srcs = ["connect.go"],
    importpath = "github.com/example/project/internal",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_bartekpacia_fhome//api:go_default_library",
        "@org_golang_x_exp//slog:go_default_library",
    ],
)
